javascript link update

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
-	<script type="text/javascript" src="C:\Users\SFM\Desktop\week-4-game\assets\javascript\game.js"></script>
+	<script type="text/javascript" src="assets\javascript\game.js"></script>
 	<div class="container">
 	<div class="header">
 		<div class="banner">
