--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Week 4 Game</title>
-	<link rel="stylesheet" type="text/css" href="C:\Users\SFM\Desktop\week-4-game\assets\css\style.css">
-	<link rel="stylesheet" type="text/css" href="C:\Users\SFM\Desktop\week-4-game\assets\css\reset.css">
+	<link rel="stylesheet" type="text/css" href="assets\css\style.css">
+	<link rel="stylesheet" type="text/css" href="assets\css\reset.css">
  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
